test/typecheck/bad-assertreturn-type-mismatch.txt
;;; ERROR: 1
;;; FLAGS: --spec
(module
  (func (param i32) (result i32) get_local 0)
  (export "foo" 0))
(assert_return (invoke "foo" (i32.const 0)) (f32.const 0))
(;; STDERR ;;;
out/test/typecheck/bad-assertreturn-type-mismatch.txt:5:17: error: syntax error, unexpected NAT, expecting (
  (export "foo" 0))
                ^
;;; STDERR ;;)
